--- a/_posts/2018-04-24-GCP-note.md
+++ b/_posts/2018-04-24-GCP-note.md
@@ -34,7 +34,17 @@ queue便于扩展，但是只有一个subscriber。pub/sub可以多个subscriber
 实时stream处理框架
 
 ### pub/sub
-When using JSON over REST, message data must be base64-encoded. Asynchronous publishing allows for batching and higher throughput in your application.Batching to Balance Latency and Throughput.最长7天存活时间。In general, accommodating more-than-once delivery requires your subscriber to be idempotent when processing messages. 
+企业级消息中间件。全球服务。
+- 负载平衡
+- 实现异步工作流
+- 发布通知
+- 刷新异步缓存
+- 多系统日志
+- 不同线程或者设备数据流
+- 改善服务可靠性
+When using JSON over REST, message data must be base64-encoded. Asynchronous publishing allows for batching and higher throughput in your application. Batching to Balance Latency and Throughput.最长7天存活时间。In general, accommodating more-than-once delivery requires your subscriber to be idempotent when processing messages. Pull delivery主动调用pull方法，可以容许batching delivery所以throughput比较好。Push delivery Pub/sub使用request方法把消息Push给subscriber。
+pull对endpoint没要求，push必须有non-selfsigned-certificate。synchronous适用于不需要立刻处理的消息，不需要长时间保持活动的连接，可以选择固定数量的消息。StreamingPull has a 100% error rate表示连接断开。依靠持久性的双向链接。优化高吞吐。buffer带来的问题，比如duplicate和stuck。
+Cloud Pub/Sub dynamically tunes the number of publishing forwarders that receive messages for a particular topic as the throughput changes。
 
 #### message ordering
 服务本身不保证顺序
@@ -89,4 +99,15 @@ grant roles to users。
 
 #### Service account
 属于应用程序，使用该账号调用Google API。不仅是identity还是resource。
+
+### Data Studio
+绿色dimension 蓝色metrics
+filter控件group部分控制
+source Google产品
+#### cache
+首先看query cache.如果调用同一个query。然后看prefetch cache。The prefetch cache is only active for data sources that use owner's credentials to access the underlying data. Both the query cache and prefetch cache automatically expire periodically. You can't disable the query cache, as doing so could result in higher data usage costs for paid data sources, such as BigQuery.
+
+
+
+
 
