--- a/_posts/2018-04-10-Spark.md
+++ b/_posts/2018-04-10-Spark.md
@@ -6,3 +6,17 @@ title: Spark基础知识整理
 
 基本一件东西。SparkSQL仅仅使用Hive metastore提高速度。使用Spark的SQL处理器。Hive on Spark使用Spark执行引擎，自己的SQL处理器。
 
+Spark aimed for fast realtime interactive analytics. need large amount of memory. unified stack for streaming, interactive and predictive analysis. RDD distributed table.
+
+- driver program
+- worker node
+
+spark context to connect to the cluster
+spark session a unified entrypoint (spark context, streaming, sql)
+
+- no execution occurs until an action
+- rdd recomputed with each action use persist to retain in memeory
+
+DataFrame is RDD in tabular format, with query optimization.
+
+flatmap applies to every element that returns multiple element into a new rdd.
