--- a/_posts/2018-08-01-NoSQL.md
+++ b/_posts/2018-08-01-NoSQL.md
@@ -14,3 +14,12 @@ http merge request merge nosql keys
 ##### OData protocol
 
 sql in url
+
+##### HBase
+
+NoSQL, low latency, distributed, high throughput, key-value storage
+column family is constant, colunms are dynamic. cells are versioned. put statement insert or update only one cell at a time. get default returns most recent version. (most recent TIMESTAMP)
+delete delete an individual cell. deleteall delete a row.
+disable table then drop. scan select multiple rows. HBase bulk insert 1. convert to TSV file with ImportTSV 2. LoadIncrementalHFiles
+Hive on HBase create external table ();...
+Apache Phoenix a jdbc HBase interface 
