--- a/_posts/2018-04-10-Spark.md
+++ b/_posts/2018-04-10-Spark.md
@@ -8,11 +8,15 @@ title: Spark基础知识整理
 
 Spark aimed for fast realtime interactive analytics. need large amount of memory. unified stack for streaming, interactive and predictive analysis. RDD distributed table.
 
-- driver program
+- driver program (spark context)
 - worker node
 
 spark context to connect to the cluster
 spark session a unified entrypoint (spark context, streaming, sql)
+spark applications are seperated.
+deploy mode client: driver outside of the cluster, cluster mode: driver inside of the cluster
+task->stage->job
+stage consists of a collection of tasks running same code on different set of data. a stage is without shuffle.
 
 - no execution occurs until an action
 - rdd recomputed with each action use persist to retain in memeory
@@ -20,3 +24,9 @@ spark session a unified entrypoint (spark context, streaming, sql)
 DataFrame is RDD in tabular format, with query optimization.
 
 flatmap applies to every element that returns multiple element into a new rdd.
+
+persist DataFrame by temporary view or shared table.
+
+inferred schema performance overhead
+
+PySpark is built on top of Spark's Java API. Data is processed in Python and cached /shuffled in the JVM
