--- a/_posts/2018-08-01-Azure.md
+++ b/_posts/2018-08-01-Azure.md
@@ -4,3 +4,7 @@ title: Azure
 ---
 
 valet-key
+
+#### Cosmos DB
+
+partition key workload driven schema design. if write heavy then distributed to more partitions, if read heavy then less partitions.
