--- a/_posts/2018-05-07-SSL.md
+++ b/_posts/2018-05-07-SSL.md
@@ -17,3 +17,13 @@ title: SSL
 取代ssl。防止tamper data。shared secret, session key, symmetric key.两种方法，key generation(Diffie-Hellman), key exchange(rsa)。handshake protocol and the record protocol. signed certificate 1. digest 2. encript using rsa and ca private key
 
 http://www.moserware.com/2009/06/first-few-milliseconds-of-https.html
+
+TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256
+1. certificate contains RSA public key for authentication
+2. ECDHE for key exchange
+3. AES_128_GCM is symmetric cipher
+4. SHA256 is PRF.
+
+DH用来保证RSA private key泄露之前的记录不会被破解。
+
+HMAC=Pseudo-Random Function(PRF)
