--- a/_posts/2018-08-01-Azure.md
+++ b/_posts/2018-08-01-Azure.md
@@ -8,3 +8,11 @@ valet-key
 #### Cosmos DB
 
 partition key workload driven schema design. if write heavy then distributed to more partitions, if read heavy then less partitions.
+consistent index will automatically index record when written. lazy index will index later.
+automatic set to off to turn off indexing  
+
+sproc optimized for transaction not read. read needs client side code. transaction within partition scope. multi-tenant service. nosiy neighborhood.
+
+#### sql data warehouse
+replicated table reduces data shuffle and suitable for small tables like dimensonal tables
+row store
