--- a/_posts/2018-04-10-Spark.md
+++ b/_posts/2018-04-10-Spark.md
@@ -2,6 +2,12 @@
 layout: post
 title: Spark基础知识整理
 ---
+
+####Hadoop cluster set up
+
+set dataname/namenode data dir. default value is /tmp/... will be cleaned after reboot.
+
+
 ## SparkSQL vs Hive on Spark
 
 基本一件东西。SparkSQL仅仅使用Hive metastore提高速度。使用Spark的SQL处理器。Hive on Spark使用Spark执行引擎，自己的SQL处理器。
