--- a/_posts/2018-12-15-Unix环境高级编程.md
+++ b/_posts/2018-12-15-Unix环境高级编程.md
@@ -17,6 +17,16 @@ create==open(fd, wronly|create|trunc, mode)
 ####read
 返回读到的字节数。从终端设备一次最多读一行。网络缓存机制导致读到的字节数少。从管道或FIFO读，只返回实际可用的字节数。
 ####缓冲大小
-文件系统采用
+操作系统内核采用了预读技术，减少IO次数，缓冲可以减少系统调用的次数
+####硬链接和软连接
+硬链接将目录中的文件项连接到i节点，一个i节点可以对应多个文件。软连接文件的内容是路径。文件重命名不需要修改文件内容。目录块是一种特殊的数据块。硬链接限制
+- 同一个文件系统
+- 只有超级用户才能创建指向目录的硬链接
+####文件时间
+- st_atim 文件数据访问时间
+- st_mtim 文件数据修改时间
+- st_ctim 文件状态（元数据）修改时间
+
+
 
 
