--- a/_posts/2018-04-01-Python.md
+++ b/_posts/2018-04-01-Python.md
@@ -12,3 +12,10 @@ reduce(func, iterable[,init])
 func(state, update)
 
 #### functools.partial
+返回一个部分函数，basetwo = partial(int, base=2)。表示int函数的一部分参数固定。
+
+#### function tools.wraps
+使包函数看起来像被包函数。
+
+#### d[] vs d.get()
+不存在key前者报错，后者返回None
