--- a/_posts/2018-11-07-Spark源码学习.md
+++ b/_posts/2018-11-07-Spark源码学习.md
@@ -12,6 +12,22 @@ IFS：internal field seperator 使用NULL character分隔。
 
 #### 部署
  master负责协调，worker负责处理task。spark应用程序启动driver，driver和master通信。worker有一个worker进程负责管理本机的任务，每一个execute对应一个execute runner。executor执行具体任务。
+- master进程管理整个集群
+- worker进程管理本地的任务执行器
+- driver进程运行app主函数并创建sparkcontext
+- 任务执行器持有任务进程池
+- 每个执行器只处理一个app
+
+
+#### job逻辑执行图
+定义了job的数据依赖，即job有哪些RDD以及RDD之间的依赖关系。本质是计算链。依赖问题包括
+- RDD之间的依赖关系
+- RDD有多少个分区
+- 分区之间的依赖关系
+分区一般由用户指定，不指定的话根据转换确定。全部依赖是真依赖，一个分区依赖另一个分区的全部数据。部分依赖是一个分区依赖另一个分区的部分数据。
+
+#### job物理执行图
+一个app包含多个job，每个job包含多个stage，每个stage包含多个task。
 
  #### RDD依赖
  完全依赖 NarrowDependency 部分依赖ShuffleDependency shuffle的作用是做聚集操作 重新partition
