--- a/_posts/2019-01-31-Airflow.md
+++ b/_posts/2019-01-31-Airflow.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Airflow
+title: Airflow源码学习
 ---
 
 ####常用工具
@@ -11,3 +11,23 @@ pipenv=npm
 
 ####SQLAlchemy
 Session/Engine/connection pool 
+
+#### CLI
+每个action定义一个subcommand，action_logging装饰器用来记录每个动作。使用tabulate打印表格到终端。
+
+
+#### APP
+#####WSGI
+web server gateway interface是一种接口规范。符合规范的app可以运行在任何符合规范的web server上。
+WSGI应用可以堆栈。好处
+- 灵活选择server和框架
+- 提高扩展性 server和app的职责不同。
+WSGI容器是独立的进程，监听的端口与web server不同。web server设置成传递请求到WSGI容器。
+- Green Unicorn
+- uWSGI
+- mod_wsgi
+
+##### ProxyFix
+APP中间件。把x-forwarded头的信息放入环境变量。
+
+
